# note

./: .gitignore  NEED2ADD_makefile_perf_test  building.txt  chrome_autopager.xml  docker_remote_registry  docker_tip  gdb_tips  gitlab_tip  gobgp_setting  linux_bridge_setting  make_silent_compile_tip  mininet_log  mininet_log_rawscript  netns_openvswitch_history  openssl_pubkey_extract  perl_tips  python-pip_install  python_snippit_tip  quagga_config.txt  rpm_cmd_history  rsync_exclude_&_gen_DirsFiles_atonce  screen_split.txt  socat_tip  string_manipulation_tip  svn_configuration_capture  terminal_color  tip_command  ubuntu_tip  vim_color_loss  vim_highlight_setting_tip  yum.repos.d-myrepo.repo  yum_repolist_update  yum_rpm_tips
DEBUGGING_NOTE/: 2016-10-31-Bgpsecio_error_with_socket  2016-11-21-hash_generation_issue  2016-11-21-hash_generation_issue_rawdata  2016-11-29-BIRD_mpNLRI_memo  2016-12-06-BIRD_gdb_hash_process_temp  2017-01-24-SRx-IPv6_Prefix_Support-[SOLVED]  2017-02-24-SRx_server_crash_when_rpki  2017-04-27_hash_generation_issue_[SOLVED]  2017-05-05-hash_generation_issue_bugzilla_report  2017-0524-Distributed_multihop_validation_[SOLVED]  2017-06-19_openssl_registerPubkey_issue  2017-11-20_exabgp_notes  ASPA_Validation_Pseudo_Code  Automake_all-am_order_changed_(Unsolved)  BGPSecOpenSSL_lib_patch_need_2018-0529  BGP_route_counter_amend_2018-0510  BIRD_add_library_2018-0514  Error_Certificate_RemoteDesktop_with_xrdp  Error_Docker_swarm_2018-0508  Experiment_docker_iperf_2018-0423  Experiment_gobgp_ExaBGP_2018-0423  HOWTO_ignore_warnings_in_python_vim  Install_bazel_on_ubuntu  NCCoE_test_2018-0625  NIS_account_changeTo_local  No_module_named_thrift_in_Python  Note_install_SRxSuite_from_github_version  SSH_hang_expecting_SSH2_MSG_KEX_ECDH_REPLY_2018-0504  Ubuntu18_xrdp_errors  Ubuntu18_xrdp_remote_desktop_errors  Ubuntu18_xrdp_remote_desktop_errors(Centos8)  Windows10_Disable_Hyper-V_booting  Wireshark_permission_error  Xauthority_X11_connection_rejected  [go]error-while-loading-shared-library  ant_JDTCompilerAdaptor  automake_aclocal-1.15_is_missing_error  automake_subdir-objects_disabled_error(Centos8)  automake_subdir_option_error_(Centos8)  bgp_info_fetch_Issue_overwriting_info_item  (+63 more)
DEBUGGING_NOTE/Binary_Hacks/: Executable_Binary_Call_graph  Runtime_Hack_binary_utils
DEBUGGING_NOTE/Kubernetes_Helm/: kubeadm_init_error_advertiseAddress  kubenetes_running_errors
DEBUGGING_NOTE/O-RAN/: ingress_endpoint_on_k8s  ric-install-kube-repo-error
DEBUGGING_NOTE/exabgp_devel_logs/: Experiment_gobgp_ExaBGP_2018-0423  exabgp_bgpsec_key_bugs_20191015  exabgp_bugs_20191015  exabgp_configuration_scope_debug_log  exabgp_readmessage_unpack_pdb_logs  python3_dict_values_not_support_indexing
DEBUGGING_NOTE/gobgp_devel_logs/: delve_debug_gobgp_CreateUpdateMsgFromPaths  gobgp_installation_procedures_and_logs_summary  gobgp_struct_attrs  log_delve_gobgp_debugging_SERVER_side
DEBUGGING_NOTE/srx_debugging_logs/: cap_screen_srx_quagga  cap_srx_test1  git_conflict_autotools  (+6 more)
Documents/: 2017-0405-gobgp_feasibility  2017-0420_TheReason_bgp-process  diff-QuaggaSRx_SvnRev2241-stock.patch  netns-hostSharingInternet_NAT
Programming/: Makefile.Libtool.template  Makefile.Shared.Template  Makefile.template
Programming/autoconf_test/: config.status  configure  configure.ac  test  testsrxconfiure.c
Programming/autoconf_test/autom4te.cache/: output.0  requests  traces.0
Programming/autoconf_test/ubuntu/: config.status  configure  configure.ac  configure.ac.orig  testsrxconfiure.c  testsrxconfiure.c.orig
Programming/autoconf_test/ubuntu/autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
Shell_Script/: Makefile_custom  Makefile_root  START-ROOT.sh  Shell_Script_Tips_Snippets  Shell_Script_Tips_Snippets_sodo  Start-Parent.sh  _.kubectl_bash_completion  add_kubectl_bashrc  auto_rpki.sh  auto_rpki_StandAlone.sh  bgp-srx-suite_sync_klee_repo_vm005.sh  bunsan1.sh  bunsan3.sh  bunsan4.sh  bunsan5.sh  cross-cert.sh  downloader_from_routerview.sh  emulab_term_confs_bkup.sh  exabgp_sync_klee_repo_vm005.sh  exabgp_sync_vm005.sh  fumidai2.sh  github_sync_vm005.sh  gobgp_sync_klee_repo_vm005.sh  gobgp_sync_vm005.sh  gr1-emulab.sh  gr2-emulab.sh  groupcmd.sh  input-expect-github_repo.sh  input-expect-kyehwanlee_repo.sh  input-expect.sh  inputtest.sh  install-docker-kubernetes-rke2.sh  install_docker-ce_on_ubuntu.sh  install_go-1.22.5.sh  install_helm.sh  install_open5gs_mod.sh  install_vagrant_virtualbox_emulab.sh  loop.sh  makeOneDay.sh  make_cscope.sh  (+23 more)
bgpd-tools-conf/: quagga-bgpd-dualstack-ipv46.conf  quagga_ipv6_howto_config  yaBGP_setting
config_and_diff_patch/: .gitignore  Centos8_powertools_Library_install_for_SRxSuite  EPEL_repo_install_for_uthash  Emulab_ReBuild_Marks_note  HostOnly_VM_to_access_Internet  HowTo_Install_Vagrant_VirtualBox6  HowTo_Install_VirtualBox6_and_Vagrant  JSON_data_easy_read_format  Makefile.Shared.Example  MyColorScheme.vifm  Often_used_tips_(cheat_sheet)  SDN_openDaylight_ODL_ONOS  autotools_tips  awk_tip  cronjob_tip  docker_swarm_setting  docker_tip  find_usage  freebsd_command_Emulab  gdb_breakpoint_examples  gdb_breakpoint_temp.txt  gdb_tips  git-svn_tips  git_rebase_conflict  git_tips.md  gitlab_github_tip  gitlab_tip  go_tip.md  gobgp_setting  gobgp_setting_and_tips  hist_openssl_ecdsa  httpd-conf.d-repo.conf  ip_command_tips  kvm_tip  macro_debugging_tip  macvlan_howto_setup  make-script-libtool-sharedlibrary  netns_hostSharingInternet_NAT  netns_linux_bridge  nmap_portScan  (+35 more)
diff.patch/: diff_bird_compile_error.patch  diff_btw_orig_n_intgrFE.patch  diff_srx_server_logfile.patch  diffcmd-example  srx_server_filediff.patch
emulab-conf/: bashrc.emulab.20141117  gitconfig.emulab.20141117  gitignore.emulab.20141117
openvswitch/: mininet_xterm_debug_raw  openvswitch-imple-log  openvswitch_installation  openvswitch_qos_config_doc2  openvswitch_qos_setting_logs  ovs_configure_command_switch
tmux-conf_tips/: _.tmux.tmux.exp2.bgpsec2.sh  _.tmux_dev  _tmux.conf  _tmux_dev  tmux_cheat_sheet  tmux_tips  tmux_useful_configuration
(+862 files in other folders)
